fixed nav spacing

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,8 @@ body {
 .site-nav ul {
   list-style: none;
   text-transform: lowercase;
+
+  padding: 0;
 }
 
 .site-nav li {
